--- a/.github/workflows/generate_json.yml
+++ b/.github/workflows/generate_json.yml
@@ -86,9 +86,9 @@ jobs:
                   tags.append({
                       "tag": tag_name,
                       "latest": is_latest,
-                      "prerelease": release.get("prerelease", False)
+                      "prerelease": release.get("prerelease", False),
                       "assets": assets,
-                      "totalDownloads": total_downloads,
+                      "totalDownloads": total_downloads
                   })
               return tags
 
